--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,14 +37,17 @@
   }
 }
 
-
+body{
+  background-color: black;
+}
 
 .back-home{ 
   color: black;
 }
 
 .form {
-  margin-top: 200px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .form-login{
@@ -57,7 +60,7 @@
 .navbar {
   background-color: rgb(0, 0, 0);
   height: 100px;
-  box-shadow: 2px 4px 4px rgb(120, 117, 117);
+  box-shadow: 1px 4px 5px 3px rgb(120, 117, 117);
 }
 
 .choice{
@@ -67,4 +70,50 @@
 
 .logo{
   font-size: 40px;
+}
+
+.card-login, .card-signup{
+  margin-top: 10%;
+  margin-right: 20px;
+  margin-left: 20px;
+  /* box-shadow: 3px 4px 3px rgb(122, 117, 117); */
+  box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+  border-radius: 50px;
+}
+
+.in{
+  margin-bottom: 30px;
+  text-shadow: 2px 3px 1px rgb(199, 210, 231);
+  
+}
+
+.label-bold{
+  font-weight: bold;
+}
+
+
+
+/* CSS */
+.button-33 {
+  background-color: #c2fbd7;
+  border-radius: 100px;
+  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+  color: green;
+  cursor: pointer;
+  display: inline-block;
+  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  padding: 7px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: 16px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-33:hover {
+  box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
+  transform: scale(1.05) rotate(-1deg);
 }
