--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,7 +60,7 @@ body{
 .navbar {
   background-color: rgb(0, 0, 0);
   height: 100px;
-  box-shadow: 1px 4px 5px 3px rgb(120, 117, 117);
+  /* box-shadow: 1px 4px 5px 3px rgb(120, 117, 117); */
 }
 
 .choice{
