--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,7 +60,7 @@ body{
 .navbar {
   background-color: rgb(0, 0, 0);
   height: 100px;
-  /* box-shadow: 1px 4px 5px 3px rgb(120, 117, 117); */
+  box-shadow: 1px 4px 5px 3px rgb(120, 117, 117);
 }
 
 .choice{
@@ -73,9 +73,9 @@ body{
 }
 
 .card-login, .card-signup{
-  margin-top: 10%;
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-top: 5%;
+  margin-right: 10%;
+  margin-left: 10%;
   /* box-shadow: 3px 4px 3px rgb(122, 117, 117); */
   box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
   border-radius: 50px;
@@ -116,4 +116,58 @@ body{
 .button-33:hover {
   box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
   transform: scale(1.05) rotate(-1deg);
+}
+
+.home-title{
+  color: white;
+  margin-top: 10%;
+}
+
+.sub-title{
+  color: white;
+}
+
+.input-post{
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+
+.input-post:focus{
+  outline: none !important;
+  border-color: #a1e9a1;
+  box-shadow: 0 0 10px #8eac8e;
+}
+
+.card-post{
+  width: 200px;
+  box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px, rgba(154, 150, 150, 0.3) 0px 18px 36px -18px;
+border-radius: 20px;
+}
+
+
+
+.submit-post{
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.submit-post:hover{
+  background-color: darkgreen;
+}
+
+.back-home{
+font-size: 18px;
+}
+
+.header{
+  color: black;
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.result{
+  height: 225px;
 }
