--- a/client/src/App.css
+++ b/client/src/App.css
@@ -128,8 +128,8 @@ body{
 }
 
 .input-post{
-  margin-left: 20px;
-  margin-right: 20px;
+  /* margin-left: 3%; */
+  margin-right: 8%;
   margin-bottom: 20px;
   border-radius: 10px;
 }
@@ -169,5 +169,10 @@ font-size: 18px;
 }
 
 .result{
-  height: 225px;
+  height: 275px;
+  margin-left: 30px;
+}
+
+.input-auth{
+  border-radius: 10px;
 }
