--- a/client/src/App.css
+++ b/client/src/App.css
@@ -101,6 +101,20 @@ body{
 
 
 /* CSS */
+/* .btn-block{
+  color: navy;
+  background-color: red;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-radius: 10px;
+} */
+/* btn-block hover */
+/* .btn-block:hover{
+  background-color: #c2fbd7;
+  color: green;
+} */
 .button-33 {
   background-color: #c2fbd7;
   border-radius: 100px;
@@ -126,10 +140,10 @@ body{
 }
 
 .button-33:hover {
-  /* TRANSITION THE COLOR TO BLUE */
-  background-color: blue;
   box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
-  transform: scale(1.05) rotate(-1deg);
+  transform: scale(1.2) rotate(-2deg);
+  /* CHANGE THE COLOR WHEN HOVERED OVER */
+  background-color: blue;
 }
 
 .home-title{
