--- a/client/src/App.css
+++ b/client/src/App.css
@@ -93,7 +93,17 @@ margin-left: 30%;
 }
 
 .logo{
-  font-size: 38px;
+  /* font-size: 38px; */
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  /* text-shadow: 2px 3px 3px rgb(84, 148, 38);
+  color: rgb(228, 245, 228); */
+  /* background-color: rgb(230,222,219);
+background: linear-gradient(45deg, rgba(230,222,219,1) 0%, rgba(6,222,98,1) 100%);
+} */
+font-size: 50px;
+background: -webkit-linear-gradient(#eee, #333);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
 }
 
 .card-login, .card-signup{
@@ -272,4 +282,27 @@ margin-bottom: 100px;
   position: relative;
   left: 40%;
 }
+
+.modal-title {
+  color: #fff;
+    background-image: linear-gradient(255deg, #f9b25e, #f17b30);
+}
+
+#pop:focus{
+  background-color: #658470;
+  color: black;
+
+}
+
+#pop{
+  color: white;
+  border-radius: 10px;
+}
+
+#pop:hover{
+  background-color: #5a7e5a;
+  font-size: 27px;
+
+}
+
 
