--- a/client/src/App.css
+++ b/client/src/App.css
@@ -135,7 +135,41 @@ margin-bottom: 30px;
   text-align: center;
 }
 
+/* Change the text color for generate-post */
+.generate-post{
+  color: rgba(255, 255, 255, 0.748) !important;
+}
 
+
+/* Change the h1 and h5 tags to have the same text color as the generate-post */
+h1{
+  color: rgba(255, 255, 255, 0.748) !important;
+  /* color: rgb(3, 115, 3) !important; */
+}
+h2{
+  color: rgba(255, 255, 255, 0.748) !important;
+}
+h5{
+  color: rgba(255, 255, 255, 0.748) !important;
+}
+h4{
+  color: rgba(213, 207, 207, 0.906) !important;
+}
+
+/* Style the clasub-title */
+.sub-title {
+  /* text size bold and bigger */
+  font-size: 25px;
+  font-weight: bold;
+  padding-top: 3rem;
+  /* Text shadowed */
+  /* text-shadow: 2px 3px 1px rgb(43, 70, 119); */
+  color: rgba(255, 255, 255, 0.748) !important;
+}
+
+p1{
+  color: rgba(255, 255, 255, 0.748) !important;
+}
 
 /* CSS */
 /* .btn-block{
@@ -153,34 +187,35 @@ margin-bottom: 30px;
   color: green;
 } */
 .button-33 {
-  background-color: #c2fbd7;
+  /* background-color: #c2fbd7; */
   border-radius: 100px;
-  box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
-  color: green;
+  /* box-shadow: rgba(5, 89, 37, 0.2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+  color: rgb(1, 69, 1); */
   cursor: pointer;
   display: inline-block;
-  font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+  /* font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif; */
   padding: 7px 20px;
   text-align: center;
-  text-decoration: none;
+  /* text-decoration: none; */
   transition: all 250ms;
   border: 0;
   font-size: 16px;
-  user-select: none;
-  -webkit-user-select: none;
+  /* user-select: none; */
+  /* -webkit-user-select: none; */
   touch-action: manipulation;
   margin-top: 30px;
   /* CENTER THE BUTTON */
   margin-left: auto;
   margin-right: auto;
   display: block;
+  color: rgb(2, 56, 2);
 }
 
 .button-33:hover {
-  box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
-  transform: scale(1.2) rotate(-2deg);
+  /* box-shadow: rgba(9, 95, 42, 0.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px; */
+  transform: scale(1.1) rotate(-0.1deg);
   /* CHANGE THE COLOR WHEN HOVERED OVER */
-  background-color: rgb(130, 130, 192);
+  color:rgb(2, 56, 2)
 }
 
 .descrip{
